# dsan5400-Final-PerfumeGenerator

./: README.md  app.py  data_downloads.py  environment.yml  extract.py  extract2.py  extract3  extractreview.py  generatetext.py  logger_config.py  pyproject.toml  recommend.py  test.txt  website_generation.py
perfume_recommeder/: data_processing.py  perfume_recommendation.py  text_generation.py  website_generation.py
perfume_recommeder/data_processing/: data_processing.py
perfume_recommender/perfume_recommender/: website_generation.py
perfume_recommender/perfume_recommender/text_generation/: fine_tune_gpt2.py  precess_reviews.py
perfume_recommender/tests/: sample_perfume_data.csv  sample_review_data.csv  test_data_processing.py  test_perfume_recommendation.py  test_text_generation.py
