[tool.poetry]
name = "perfume-recommender"
version = "0.1.0"
description = "NLP-powered perfume recommendation and description generation system"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3"
scikit-learn = "^0.24"
nltk = "^3.6"
transformers = "^4.8"
streamlit = "^0.84"
torch = "^1.9"
matplotlib = "^3.4"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pylint = "^2.9"
ruff = "^0.0.16"
pre-commit = "^2.14.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
